Switch default color to auto

--- a/hugo.toml
+++ b/hugo.toml
@@ -70,7 +70,7 @@ theme = "hugo-blog-awesome"
 
 [Languages.cs.params]
   sitename = "Czech Consim Con"
-  defaultColor = "dark" # set color mode: dark, light, auto
+  defaultColor = "auto" # set color mode: dark, light, auto
   # Setting it to 'auto' applies the color scheme based on the visitor's device color preference.If you don't specify anything, ignore this parameter, or leave it blank,
   # the default value is set to 'auto'.
   # You can take a look at layouts/index.html for more information.
@@ -140,7 +140,7 @@ theme = "hugo-blog-awesome"
 
 [Languages.en.params]
   sitename = "Czech Consim Con"
-  defaultColor = "dark" # set color mode: dark, light, auto
+  defaultColor = "auto" # set color mode: dark, light, auto
   # Setting it to 'auto' applies the color scheme based on the visitor's device color preference.If you don't specify anything, ignore this parameter, or leave it blank,
   # the default value is set to 'auto'.
   # You can take a look at layouts/index.html for more information.
