Change conference to convention

--- a/hugo.toml
+++ b/hugo.toml
@@ -144,7 +144,7 @@ theme = "hugo-blog-awesome"
   # Setting it to 'auto' applies the color scheme based on the visitor's device color preference.If you don't specify anything, ignore this parameter, or leave it blank,
   # the default value is set to 'auto'.
   # You can take a look at layouts/index.html for more information.
-  description = "Czech conference of historical and war games"
+  description = "Czech convention of historical and war games"
   mainSections = ['posts']
   toc = false # set to false to disable table of contents 'globally'
   tocOpen = false # set to true to open table of contents by default
@@ -166,7 +166,7 @@ theme = "hugo-blog-awesome"
   # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
   intro = "Czech Consim Con"
   name = "Czech Consim Con"
-  description = "Czech Consim Con (C3) is a conference of historical and war games. The second year will take place on October 17-19, 2025."
+  description = "Czech Consim Con (C3) is a convention of historical and war games. The second year will take place on October 17-19, 2025."
 
 # Allow to override webmanifest options
 [Languages.en.params.webmanifest]
